# img2pic

./: .gitignore  LICENSE  README.md  demo_pixelize.py  edge_detect_pixelize.py  energ  grid_sampling_pixelize.py  pixi.toml
ComfyUI-custom_nodes/Pixelize/: __init__.py  backend.py  nodes.py
web/: .gitignore  DEPLOYMENT.md  PWA-README.md  README.md  index.html  package.json  pnpm-lock.yaml  quasar.config.ts  wrangler.toml
web/.claude/: settings.local.json
web/scripts/: build-pwa.js  build-wasm.js  generate-icons.js
web/src-pwa/: custom-service-worker.js  manifest.json  register-service-worker.js
web/src-pwa/icons/: README.md
web/src/boot/: i18n.ts  pwa.ts
web/src/components/: EssentialLink.vue  InlineImageViewer.vue  PWAInstaller.vue  WasmSettings.vue
web/src/css/: app.scss
web/src/i18n/: index.ts
web/src/i18n/ar/: index.ts
web/src/layouts/: MainLayout.vue
web/src/pages/: IndexPage.vue  PixelArtPage.vue
web/src/pixel/: border.ts  edgeDetect.ts  energy.ts  filters.ts  grid.ts  grid_old.ts  pipeline.ts  sample.ts  stats.ts  types.ts  wasmApi.ts  wasmCompat.ts  workerApi.ts
web/src/router/: routes.ts
web/src/stores/: settings.ts
web/src/types/: file-saver.d.ts  wasm.d.ts
web/src/utils/: storage.ts
web/wasm/: Cargo.toml
web/wasm/pkg/: img2pic_wasm.d.ts  img2pic_wasm.js  img2pic_wasm_bg.wasm  img2pic_wasm_bg.wasm.d.ts  index.d.ts  index.js  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
web/wasm/src/: direct_api.rs  energy.rs  grid.rs  json_api.rs  lib.rs
web/workers-site/: index.js  package.json
(+15 files in other folders)
